--- a/package.json
+++ b/package.json
@@ -31,5 +31,11 @@
   "devDependencies": {
     "electron": "^29.1.0",
     "mocha": "^10.3.0"
+  },
+  "dependencies": {
+    "@babel/generator": "^7.25.0",
+    "@babel/parser": "^7.25.3",
+    "@babel/template": "^7.25.0",
+    "@babel/traverse": "^7.25.3"
   }
 }
